# draft-kings-experiment

./: PLAN.md  README.md  pyproject.toml
src/dk_cli/: __init__.py  betting.py  cli.py  client.py  config.py  database.py  display.py  models.py
src/dk_cli/server/: __init__.py  app.py  routes.py  state.py  tasks.py  websocket.py
web/: package-lock.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/api/: betting.ts
web/src/components/: BankrollDisplay.tsx  BetSlipModal.tsx  ConnectionStatus.tsx  FeaturedGames.tsx  GameCard.tsx  GameRow.tsx  GamesTable.tsx  Header.tsx  LiveBadge.tsx  OddsButton.tsx  SettleGameButton.tsx
web/src/context/: BettingContext.tsx
web/src/hooks/: useWebSocket.ts
web/src/pages/: BetHistoryPage.tsx
web/src/types/: api.ts
