[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dk-cli"
version = "0.1.0"
description = "CLI tool for fetching DraftKings NFL betting lines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "playwright>=1.40",
    "rich>=13.0",
    "questionary>=2.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
dk = "dk_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dk_cli"]
